[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UIElements/PlayersPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Ode to Idle Gaming.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UIElements/PlayerButton.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="PlayersPanel" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 820.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="PlayerTitle" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 820.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Players"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Panel" type="PanelContainer" parent="." index="1"]

modulate = Color( 1, 0.4, 0.4, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 50.0
margin_right = 210.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Material", "Rect", "Visibility" ]

[node name="PlayerButtons" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="PlayerButton1" parent="PlayerButtons" index="0" instance=ExtResource( 3 )]

_sections_unfolded = [ "Material", "Visibility" ]
numID = 1

[node name="PlayerName" parent="PlayerButtons/PlayerButton1" index="0"]

_sections_unfolded = [ "Visibility" ]

[node name="NumberPanel" parent="PlayerButtons/PlayerButton1/PlayerName" index="2"]

_sections_unfolded = [ "Visibility" ]

[node name="PlayerButton2" parent="PlayerButtons" index="1" instance=ExtResource( 3 )]

margin_left = 220.0
margin_right = 400.0
_sections_unfolded = [ "Material", "Visibility" ]
numID = 2

[node name="PlayerName" parent="PlayerButtons/PlayerButton2" index="0"]

color = Color( 0.304077, 0.734375, 0.431822, 0.414353 )
_sections_unfolded = [ "Visibility" ]

[node name="NumberPanel" parent="PlayerButtons/PlayerButton2/PlayerName" index="2"]

color = Color( 0.304077, 0.734375, 0.431822, 0.414353 )

[node name="PlayerButton3" parent="PlayerButtons" index="2" instance=ExtResource( 3 )]

margin_left = 420.0
margin_right = 600.0
numID = 3

[node name="PlayerName" parent="PlayerButtons/PlayerButton3" index="0"]

color = Color( 0.734375, 0.697396, 0.304077, 0.414353 )

[node name="NumberPanel" parent="PlayerButtons/PlayerButton3/PlayerName" index="2"]

color = Color( 0.734375, 0.697396, 0.304077, 0.414353 )

[node name="PlayerButton4" parent="PlayerButtons" index="3" instance=ExtResource( 3 )]

margin_left = 620.0
margin_right = 800.0
numID = 4

[node name="PlayerName" parent="PlayerButtons/PlayerButton4" index="0"]

color = Color( 0.734375, 0.334332, 0.304077, 0.414353 )

[node name="NumberPanel" parent="PlayerButtons/PlayerButton4/PlayerName" index="2"]

color = Color( 0.734375, 0.334332, 0.304077, 0.414353 )

[node name="PlayerButton5" parent="PlayerButtons" index="4" instance=ExtResource( 3 )]

margin_top = 290.0
margin_bottom = 500.0
numID = 5

[node name="PlayerName" parent="PlayerButtons/PlayerButton5" index="0"]

color = Color( 0.734375, 0.304077, 0.717566, 0.414353 )

[node name="NumberPanel" parent="PlayerButtons/PlayerButton5/PlayerName" index="2"]

color = Color( 0.734375, 0.304077, 0.717566, 0.414353 )

[node name="PlayerButton6" parent="PlayerButtons" index="5" instance=ExtResource( 3 )]

margin_left = 220.0
margin_top = 290.0
margin_right = 400.0
margin_bottom = 500.0
numID = 6

[node name="PlayerName" parent="PlayerButtons/PlayerButton6" index="0"]

color = Color( 0.124878, 0.726563, 0.698359, 0.414353 )

[node name="NumberPanel" parent="PlayerButtons/PlayerButton6/PlayerName" index="2"]

color = Color( 0.124878, 0.726563, 0.698359, 0.414353 )

[node name="PlayerButton7" parent="PlayerButtons" index="6" instance=ExtResource( 3 )]

margin_left = 420.0
margin_top = 290.0
margin_right = 600.0
margin_bottom = 500.0
numID = 7

[node name="PlayerName" parent="PlayerButtons/PlayerButton7" index="0"]

color = Color( 1, 1, 1, 0.414353 )

[node name="NumberPanel" parent="PlayerButtons/PlayerButton7/PlayerName" index="2"]

color = Color( 1, 1, 1, 0.414353 )

[node name="PlayerButton8" parent="PlayerButtons" index="7" instance=ExtResource( 3 )]

margin_left = 620.0
margin_top = 290.0
margin_right = 800.0
margin_bottom = 500.0
numID = 8

[node name="PlayerName" parent="PlayerButtons/PlayerButton8" index="0"]

color = Color( 0, 0, 0, 0.414353 )

[node name="NumberPanel" parent="PlayerButtons/PlayerButton8/PlayerName" index="2"]

color = Color( 0, 0, 0, 0.414353 )

[node name="NextPanel" type="PanelContainer" parent="." index="3"]

visible = false
modulate = Color( 1, 0.4, 0.4, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 310.0
margin_top = 510.0
margin_right = 510.0
margin_bottom = 590.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Material", "Rect", "Visibility" ]

[node name="PlayButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 520.0
margin_right = 500.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility", "custom_fonts" ]


[editable path="PlayerButtons/PlayerButton1"]
[editable path="PlayerButtons/PlayerButton2"]
[editable path="PlayerButtons/PlayerButton3"]
[editable path="PlayerButtons/PlayerButton4"]
[editable path="PlayerButtons/PlayerButton5"]
[editable path="PlayerButtons/PlayerButton6"]
[editable path="PlayerButtons/PlayerButton7"]
[editable path="PlayerButtons/PlayerButton8"]
